fix: fullscreen first page on mobile devices

--- a/src/assets/sass/components/_wrapper.scss
+++ b/src/assets/sass/components/_wrapper.scss
@@ -83,7 +83,7 @@
 
 			@include breakpoint('<=small') {
 				padding: 2em 0;
-				min-height: 0;
+				min-height: 100vh;
 
 				body.is-ie & {
 					height: auto;
